# lua-filesystem

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: copy-target-file.cmake  handle-external-dependencies.cmake  lua-filesystem-config.cmake.in
src/: filesystem.cpp
test/: CMakeLists.txt  readme.md
test/lib/: test.lua
test/tests/: directory_entry.lua  directory_iterator.lua  non_member_functions.lua  path.lua
